--- a/task.html
+++ b/task.html
@@ -8,27 +8,6 @@
     <link rel="stylesheet" href="task.css">
 </head>
 <body>
-    <div class="box">
-        <div class="box-details">
-           <div class="text-input">
-            <label for="task-title">Task Title</label>
-            <br>
-            <input type="text" name="Task title" id="task-title">
-           </div>
-           <div class="date-input">
-            <label for="Task-Date">Task Date</label>
-            <br>
-            <input type="date" name="Task-Date" id="Task-Date">
-           </div>
-            <br>
-            <button>Add Task</button>
-        </div>
-      <div class="box2">
-        <h2 class="list-text">List Tasks</h2>
-        <div class="tasks">
-            <h2 class="add-task">No tasks Added Yet</h2>
-        </div>
-      </div>
-    </div>
 </body>
+<script src="task.js"></script>
 </html>
